--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "15.4.6",
@@ -20,6 +24,7 @@
     "react-parallax-tilt": "^1.7.306",
     "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.182.0",
     "tsparticles": "^3.9.1"
   },
   "devDependencies": {
