--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "lenis": "^1.3.17",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
-    "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.1.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-parallax-tilt": "^1.7.306",
     "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^3.3.1",
